--- a/app/views/organizer/events/show.html.erb
+++ b/app/views/organizer/events/show.html.erb
@@ -39,9 +39,8 @@
               <% @event.event_users.each do |eu| %>
                 <li><%= eu.user.profile.email %> | <span class="label"><%= eu.state %></span> <i class="icon-credit-card"></i></li>
                 <li><hr></li>
-                <li><span><%= link_to "Add or edit Authorized Users" %> <i class="icon-external-link"></i></span></li>
+                <li><span><%= link_to "Add or edit Authorized Users", event_users_path %> <i class="icon-external-link"></i></span></li>
               <% end %>
-              <%= render 'authorized_users' %>
               </ul>
             </div>
           </div>
