--- a/app/views/event_users/_form.html.erb
+++ b/app/views/event_users/_form.html.erb
@@ -2,6 +2,9 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
+    <%= f.input :event_id, as: :hidden, input_html: {value: @event.id} %>
+    <%= f.input :email %>
+    <%= f.select :state, [['read', 0], ['edit', 1], ['admin', 2], ['organizer', 3]] %>
   </div>
 
   <div class="form-actions">
