--- a/app/assets/javascripts/events.js.coffee.erb
+++ b/app/assets/javascripts/events.js.coffee.erb
@@ -92,3 +92,10 @@ $ ->
 $ ->
   width = $('.bar').data('funded')
   $('.bar').css("width", "#{width}%")
+
+# zcip
+
+$ ->
+  $('.icon-link').zclip
+    path: "<%= asset_path 'ZeroClipboard.swf' %>"
+    copy: $('.event-funding').text()
