implemented social share finally

--- a/app/assets/javascripts/events.js.coffee.erb
+++ b/app/assets/javascripts/events.js.coffee.erb
@@ -96,6 +96,6 @@ $ ->
 # zcip
 
 $ ->
-  $('.icon-link').zclip
+  $('#copy-event-info').zclip
     path: "<%= asset_path 'ZeroClipboard.swf' %>"
     copy: $('.event-funding').text()
