--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -142,9 +142,19 @@
 <% else %>
 <h3>This Event has not been published.</h3>
 <% end %>
-<script type="text/javascript">
-var addthis_config = {
+
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-513ba15373992907">
+	var addthis_share = {
+     url_transforms : {
+          shorten: {
+               twitter: 'bitly'
+          }
+     },
+     shorteners : {
+          bitly : {}
+     }
+	}
+	var addthis_config = {
      data_track_clickback: false
-}
+	}
 </script>
-<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-513ba15373992907"></script>
