--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,12 +1,16 @@
 <div class="container">
-	<div class="row">
-		<div class="span12">
-			<div class="well">
+	<div class="row well">
+		<div class="">
+			<div class="span12">
 				<header>
-					<h2>Thanks <%= @order.email %>!... <br><small>Your order <%= number_to_currency(@order.total) %> was successful.</small></h2>
-					<p class="lead">An email has been sent to <%= @order.email %> with your ticket. </p>
+					<h2>Thanks <%= @order.email %>!... <br><small>Your order totaling <%= number_to_currency(@order.total) %> was successful.</small></h2>
 				</header>
-				<%= link_to "Back", event_path(@order.event), class: "btn btn-primary" %>
+				<p class="lead">An email has been sent to <%= @order.email %> with your order receipt and details. </p>
+				<p class="lead">If you have any questions regarding your order, contact us and quote your unique order reference -</p><br>
+				<p><span class="well">order uuid: <%= @order.uuid %></span></p>
+			</div>
+			<div class="span12 pagination-centered">
+				<%= link_to "Back", event_path(@order.event), class: "btn btn-primary btn-large" %>
 				<%= link_to "Save your Account", signup_path if current_user.guest?  %>
 			</div>
 		</div>
