--- a/app/views/notifier/order_created.text.erb
+++ b/app/views/notifier/order_created.text.erb
@@ -4,15 +4,15 @@ Your Ticket Order
 
 -----------------------------------------------------------------------
 
-Thanks <%= @order.name %>
+Thanks <%= @order.email %>
 
-Your ordered <%= pluralize(@order.quantity, 'ticket') %> for <%= @event.title %> on <%= time_tag(@event.date) %> with card ending #<%= @order.last4 %>.
+You ordered <%= pluralize(@order.quantity, 'ticket') %> for <%= @event.title %> on <%= @event.date.strftime("%A, %b %d") %> in <%= @event.location.city %>.
 
 Your unique order reference is <%= @order.uuid %>.
 
 Tickets will be dispatched when your card has been successfully charged.
 
-For more information on how event funding works, <%= link_to "go here", info_url %>.
+For more information on how event funding works go to www.100motels.com/info
 
 Thanks and see you at the show!
 
