added wells not sure about them

--- a/app/assets/javascripts/events.js.coffee.erb
+++ b/app/assets/javascripts/events.js.coffee.erb
@@ -92,3 +92,11 @@ $ ->
 $ ->
   width = $('.bar').data('funded')
   $('.bar').css("width", "#{width}%")
+
+#Equal height for boxes
+$ ->
+  boxes = $(".well")
+  maxHeight = Math.max.apply(Math, boxes.map(->
+    $(this).height()
+  ).get())
+  boxes.height maxHeight
