--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -2,7 +2,7 @@
   <%= f.input :event_id, as: :hidden, input_html: { value: @event.id } %>
   <%= f.input :quantity, collection: 1..4, input_html: { class: "input-mini"}, label: false %>
   <% unless current_user && current_user.guest? == false %>
-    <%= f.input :email, label: false, placeholder: "  your email address", input_html: { class: "input-medium" }, required: :true %>
+    <%= f.input :email, label: false, placeholder: "  enter email address", input_html: { class: "input-medium" }, required: :true %>
   <% else %>
     <%= f.input :email, label: false, input_html: { value: current_user.email } %>
   <% end %>
