--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -6,14 +6,13 @@
   <%= tag :meta, property: "og:url", content: event_url(@event) %>
   <%#= tag :meta, property: "og:image", content: request.protocol + request.host_with_port + image_path(@movie.image) %>
 <% end %>
+<% content_tag :header, title(@event) %>
 <% if @event.visible?|| @event.event_owner? %>
-	<% @event.header %>
 	<div class="container" id="event-background">
 		<% if @event.event_owner? %>
 		<div class="admin-bar">
 			<ul class="inline pull-right">
-			  <li><i class="icon-credit-card"></i><span class="label label-important">Payments not activated</span></li>
-			  <li><i class="icon-eye-close"></i><span class="label label-warning">Event is private</span></li>
+			  <li><%= @event.private_or_public %></li>
 			  <li>
 			  	<div class="dropdown">
 		        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
@@ -39,12 +38,12 @@
 						<small><%= @event.edit_icon %> <%= @organizer.user_name || "organizer's business name" %> presents </small><br>
 						<%= @event.edit_icon %> <%= @event.title %><br>
 						<small>
-							<%= @event.edit_icon %> <%= @event.date %> |
+							<%= @event.edit_icon %> <%= @event.formatted_date %> |
 							<a href="#tickets"><i class="icon-shopping-cart"></i></a>
 							<a href="#location"><i class="icon-map-marker"></i></a>
 							<a href="#event-playlist"><i class="icon-headphones"></i></a>
 							<a href="#event-vimeo"><i class="icon-film"></i></a>
-							<a href="#about"><i class="icon-info-sign"></i></a><br>
+							<a href="#about"><i class="icon-info-sign"></i></a>
 							<a href="#bio"><i class="icon-quote-left"></i></a><br>
 							<%= @event.location.city %>
 						</small>
