--- a/app/views/organizer/events/show.html.erb
+++ b/app/views/organizer/events/show.html.erb
@@ -14,10 +14,21 @@
           </ul>
         </div>
       </li>
-      <li class="admin-bar"><span class='label'><%= "#{@event.title} | #{@event.location.city} | #{@event.date.strftime('%d %b')}" %></span></li>
-      <li><i class="icon-ok-circle"></i><span class="label label-success">Payments activated</span></li>
-      <li><i class="icon-eye-close"></i><span class="label label-warning">Event is private</span></li>
+      <li class="muted"><span class="well well-small"><%= "#{@event.title} | #{@event.location.city} | #{@event.date.strftime('%d %b')}" %></span></li>
+
        <li class="pull-right"><%= render 'search' %></li>
+    </ul>
+  </div>
+</div>
+<div class="row-fluid">
+  <div class="span12">
+    <ul class="inline">
+      <li><h3><i class="icon-dashboard"></i></h3></li>
+      <li><span class="label label-info">Time left <i class="icon-time"></i><%= @event.date > DateTime.now + 2.hour ? distance_of_time_in_words(Time.now, @event.date, include_seconds = false) : "Time's up!"  %></span></li>
+      <li><span class="label label-info">Funding <i class="icon-money"></i> <%= number_to_currency(@event.orders.funding.sum(:quantity) * @event.ticket_price) %></span></li>
+      <li><span class="label label-info">unsold tickets: <%= @event.capacity - @event.orders.funding.sum(:quantity) %></span></li>
+      <li><span class="label label-success"><i class="icon-ok-circle"></i> Payments activated</span></li>
+      <li><span class="label label-warning"><i class="icon-eye-close"></i> Event is private</span></li>
     </ul>
   </div>
 </div>
@@ -46,27 +57,6 @@
           </div>
         </div>
       <% end %>
-      <div class="accordion-group">
-        <div class="accordion-heading">
-          <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseFour">
-            Event Stats <i class="icon-plus itoggle"></i>
-          </a>
-        </div>
-        <div id="collapseFour" class="accordion-body collapse">
-          <div class="accordion-inner">
-            <dl class="dl">
-              <dt>time left</dt>
-              <dd><%= @event.date > DateTime.now + 2.hour ? distance_of_time_in_words(Time.now, @event.date, include_seconds = false) : "Time's up!"  %></dd>
-              <dt>funding:</dt>
-              <dd><%= number_to_currency(@event.orders.funding.sum(:quantity) * @event.ticket_price) %></dd>
-              <dt>capacity:</dt>
-              <dd><%= @event.capacity %></dd>
-              <dt>tickets-left: </dt>
-              <dd><%= @event.capacity - @event.orders.funding.sum(:quantity) %></dd>
-            </dl>
-          </div>
-        </div>
-      </div>
 
     <% if current_user.event_users.where(event_id: @event.id).first.state_organizer?  %>
       <div class="accordion-group">
