--- a/app/views/organizer/events/show.html.erb
+++ b/app/views/organizer/events/show.html.erb
@@ -27,7 +27,7 @@
       <li><span class="label label-info">Time left <i class="icon-time"></i><%= @event.date > DateTime.now + 2.hour ? distance_of_time_in_words(Time.now, @event.date, include_seconds = false) : "Time's up!"  %></span></li>
       <li><span class="label label-info">Funding <i class="icon-money"></i> <%= number_to_currency(@event.orders.funding.sum(:total)) %></span></li>
       <li><span class="label label-info">unsold tickets: <%= @event.capacity - @event.orders.funding.sum(:quantity) %></span></li>
-      <li><span class="label label-success"><i class="icon-ok-circle"></i> Payments activated</span></li>
+      <li><span class="label label-important"><i class="icon-lock"></i> Payments are locked!</span></li>
       <li><%= @decorated_event.private_or_public %></li>
     </ul>
   </div>
@@ -41,7 +41,7 @@
         <div class="accordion-group">
           <div class="accordion-heading">
             <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseFive">
-              <i class="icon-user"></i> Authorized Users
+              <i class="icon-user"></i> Authorized Users <i class="icon-plus itoggle"></i>
             </a>
           </div>
           <div id="collapseFive" class="accordion-body collapse">
