--- a/app/views/organizer/events/show.html.erb
+++ b/app/views/organizer/events/show.html.erb
@@ -88,6 +88,7 @@
           <div class="accordion-inner">
             <ul class="nav nav-tabs nav-stacked">
               <li><%= link_to "View Event", event_path(@event), class: "" unless @event.state_cancelled? %></li>
+              <li><a><%= @decorated_event.toggle_visible %></a></li>
               <li><%= link_to "New Event", new_organizer_event_path(@event), class: "" %></li>
               <li><%= link_to "Edit Event", edit_organizer_event_path(@event), class: "" unless @event.state_cancelled? %></li>
               <li><%= link_to "Orders PDF", organizer_event_path(@event, format: "pdf"), class: "" %></li>
