--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -19,14 +19,14 @@
 	<hr>
 	<div class="row-fluid">
 		<div class="span12">
-				<ul class="thumbnails">
+				<ul class="thumbnails pagination-centered">
 					<% @events.each do |event| %>
-						<li class="span4 pagination-centered">
+						<li class="span3">
 							<a class="thumbnail" href='<%= event_path(event) %>'>
                 <%= filepicker_image_tag event.image, width: 200, height: 200, fit: 'crop' if event.image.present? %>
                 <div class="event-index-artists">
-									<h3><%= event.title %><br><small><%= event.artist %></small></h3>
-									<h6><%= event.location.city %> - <%= event.date.strftime('%d/%m/%Y') %></h6>
+									<h3><%= truncate(event.title) %><br><small><%= truncate(event.artist) %></small></h3>
+									<h6><%= truncate(event.location.city, length: 15) %> - <%= event.date.strftime('%d/%m/%Y') %></h6>
 								</div>
 							</a>
 						</li>
