--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -36,7 +36,7 @@
 				<div class="span12 event-header">
 					<h2>
 						<small><%= @event.edit_icon %> <%= @organizer.user_name || "organizer's business name" %> presents </small><br>
-						<%= @event.edit_icon %> <%= @event.title %><br>
+						<%= @event.edit_icon %> <%= @event.bip_title %><br>
 						<small>
 							<%= @event.edit_icon %> <%= @event.formatted_date %> |
 							<a href="#tickets"><i class="icon-shopping-cart"></i></a>
@@ -55,7 +55,7 @@
 				<div class="span6 event-poster" data-url='<%= @event.image %>'>
 					<h1><i class="icon-info-sign muted" id="about"></i></h1>
 					<div class="event-funding well well-small">
-						<h3> <%= @event.edit_icon %> <%= @event.artist %></h3>
+						<h3> <%= @event.edit_icon %> <%= @event.bip_artist %></h3>
 						<h3 class="hidden-desktop">
 							<small>please share!</small>
 							<div class="disabled-shares" data-toggle="popover" title="" data-content="Share" data-placement="bottom">
@@ -76,7 +76,7 @@
 						</h3>
 
 						<% if @event.on_sale? %>
-							<h4><%= @event.left_to_go %> left to sell <%= @event.sales %> tickets <i class="icon-question-sign" data-toggle="popover" title="" data-content="Go to 'Info' for more on how event funding works"></i></h4>
+							<h4><%= @event.left_to_go %> left to sell <%= @event.sales %> tickets <i class="icon-question-sign" data-toggle="popover" title="" data-content="Go to the 'Info' page for more on how event funding works"></i></h4>
 							<div class="progress">
 							  <div class="bar" style="width: 100%;" data-funded="<%= @event.per_cent_funded %>"><%= @event.per_cent_funded %>% funded</div>
 							</div>
