--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -70,6 +70,7 @@
 
 .link-button {
     text-decoration: none;
+    text-align: left;
     border: none;
     background-color: transparent;
     font-weight: normal;
