--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -39,20 +39,19 @@
   }
 
   .search {
-    max-width: 940px;
-    margin: 20px 0;
+    max-width: 120px;
     input[type="text"] {
-      @include media-between($small-min, $small-max) {
-        min-width: 500px;
-      }
-      @include media-between($handheld-min, $handheld-max) {
-        min-width: 300px;
-      }
-      min-width: 200px;
-      height: 60px;
+      // @include media-between($small-min, $small-max) {
+      //   min-width: 500px;
+      // }
+      // @include media-between($handheld-min, $handheld-max) {
+      //   min-width: 300px;
+      // }
+      // min-width: 200px;
+      height: 45px;
     }
     button {
-       height: 60px;
+       height: 45px;
        margin: 0;
     }
   }
@@ -63,11 +62,17 @@
   margin: 20px auto;
 }
 
+.small-container {
+  max-width: 600px;
+  margin: 100px auto 0;
+}
+
 .big-logo {
+  padding: 5px;
   h2, a {
     // padding-top: 20px;
     font-family: 'Lobster', cursive;
-    color: $grayLight;
+    color: $white;
     font-weight: 400;
     margin-bottom: 20px;
   }
@@ -91,7 +96,7 @@
   font-family: 'Cabin', serif;
   color: $white;
   min-height: 400px;
-  span, article  {
+  .black-back  {
     letter-spacing: -1px;
     background: rgb(0, 0, 0); /* fallback color */
     background: rgba(0, 0, 0, 0.7);
@@ -111,52 +116,8 @@
   }
 }
 
-// paper folds effect not really working, remove class to remove
-.paper-folds
-{
-  position: relative;
-  width: 500px;
-  padding: 50px;
-  margin: 0 auto;
-  background-color: #fff;
-  -webkit-box-shadow: 0 0 4px rgba(0, 0, 0, 0.2), inset 0 0 50px rgba(0, 0, 0, 0.1);
-  -moz-box-shadow: 0 0 4px rgba(0, 0, 0, 0.2), inset 0 0 50px rgba(0, 0, 0, 0.1);
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2), inset 0 0 50px rgba(0, 0, 0, 0.1);
-}
-
-.paper-folds:before, .paper-folds:after
-{
-  position: absolute;
-  width: 40%;
-  height: 10px;
-  content: ' ';
-  left: 12px;
-  bottom: 12px;
-  background: transparent;
-  -webkit-transform: skew(-5deg) rotate(-5deg);
-  -moz-transform: skew(-5deg) rotate(-5deg);
-  -ms-transform: skew(-5deg) rotate(-5deg);
-  -o-transform: skew(-5deg) rotate(-5deg);
-  transform: skew(-5deg) rotate(-5deg);
-  -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
-  -moz-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
-  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
-  z-index: -1;
-}
-.paper-folds:after
-{
-  left: auto;
-  right: 12px;
-  -webkit-transform: skew(5deg) rotate(5deg);
-  -moz-transform: skew(5deg) rotate(5deg);
-  -ms-transform: skew(5deg) rotate(5deg);
-  -o-transform: skew(5deg) rotate(5deg);
-  transform: skew(5deg) rotate(5deg);
-}
-
 .landing-info {
-   max-width: 940px;
-  padding-bottom: 10px;
+  padding: 20px;
   p, h3 {
     @include media-below($handheld-max){
     font-size: 110%;
@@ -165,7 +126,9 @@
   }
 }
 
-
+.landing-image {
+  width: 100%;
+}
 
 
 
