--- a/app/views/layouts/landing.html.erb
+++ b/app/views/layouts/landing.html.erb
@@ -19,7 +19,7 @@
   </head>
   <body id="<%= params[:controller].parameterize %>_controller">
     <div class="wrapper">
-      <div class="container">
+      <div class="">
         <%= yield %>
       </div>
       <div class="push"><!--//--></div>
