--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,26 +1,19 @@
-<div class="container narrow-container">
+<div class="landing-image">
   <div class="big-logo">
-    <div class="row-fluid">
-      <div class="span12">
-       <% unless current_user %>
-         <h2>100 Motels | <small><%= link_to "sign-in", login_path %> &middot; <%= link_to "events", events_path %> </small></h2>
-        <% end %>
-      </div>
-    </div>
+    <% unless current_user %>
+      <h2>100 Motels | <small><%= link_to "sign-in", login_path %> &middot; <%= link_to "events", events_path %> </small></h2>
+    <% end %>
   </div>
-  <div class="row-fluid">
-    <div class="headline paper-folds span12 ">
-      <div class="row-fluid">
-        <div class="span8">
+    <div class="headline small-container">
           <h2>
-            <span>Tour the World without a record label.</span>
+            <span class="black-back">Tour the World without a record label.</span>
           </h2> <br>
-          <%= link_to "Try it free", guest_profiles_path, method: :post, class: 'btn btn-large btn-success' %>
-        </div>
-      </div>
+          <span class="span3">
+            <%= link_to "Try it free", guest_profiles_path, method: :post, class: 'btn btn-large btn-success' %><div class="search pull-right"><%= render 'search' %></div>
+          </span>
     </div>
   </div>
-  <hr class="fancy-hr">
+  <!-- <hr class="fancy-hr"> -->
 </div>
 
 <div class="container landing-info">
@@ -67,9 +60,3 @@
       <!-- <a href="/info" class="link-icon link-icon--more">more</a> -->
     </div>
 </div>
-<hr class="fancy-hr">
-<!-- div class="container">
-  <div class="row-fluid-fluid">
-      <div class="span12 search"><%= render 'search' %></div>
-  </div>
-</div> -->
