--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -16,47 +16,33 @@
   <!-- <hr class="fancy-hr"> -->
 </div>
 
-<div class="container landing-info">
+<div class="landing-info">
   <div class="row-fluid">
-    <div class="span6">
-      <h3 class=""><i class="icon-lightbulb"></i> What's the idea?</h3>
-      <p class="">
-        In some ways, Artists have never had it so good. From creative aids to global channels of distribution, we can produce our work and expose it to a large audience without ceding control or diluting our artistic preorgative.</p>
-        <p>
-        But we are still living in the past when it comes the <strong>performance of our work</strong>. There isn't an obviously better solution to the traditional ways of organizing events and tours and that's what I'm trying to change.</p>
-       <p>100 Motels comprises <strong>a Web Ticketing and Crowdfunding</strong> platform in one, engineered above all else to provide a <strong>risk-free</strong> funding environment for its users.
-      </p>
-      <!-- <a href="/info" class="">more </a> -->
+    <div class="span6 well">
+      <h3 class=""><i class="icon-magic"></i> Features</h3>
+      <hr>
+      <p class="lead">Progressive Crowdfunding and Ticketing, performer focused.</p>
+      <%= link_to "More", info_path, class: "btn btn-large" %>
     </div>
-    <div class="span6">
-      <h3 class=""><i class="icon-money"></i> Low fees</h3>
-      <p class="">
-        <p>You can take as many orders as you like for your event <strong>without incurring fees</strong> - that only happens when you draw funds into your bank account.</p>
-        If you're an Artist performing CC licensed work 100 Motel's fee is discounted to <strong>only 1%</strong> of the ticket price, othewise it's <strong>2.5%.</strong></p>
-        <p>Credit card processing is handled by Stripe who currently charge 2.9% plus 30c per transaction.</p>
-        <p>Fees are added-on. Whatever you set your ticket price to, the full amount gets deposited into your bank account. </p>
-      </p>
-      <!-- <a href="/info" class="link-icon link-icon--more">more</a> -->
+    <div class="span6 well">
+      <h3 class=""><i class="icon-money"></i> Fees</h3>
+      <hr>
+      <p class="lead">Total 3.9% + 30c per transaction added-on (full ticket price is yours), free refunds.</p>
+      <%= link_to "More", info_path, class: "btn btn-large" %>
     </div>
   </div>
   <div class="row-fluid">
-    <div class="span6">
-      <h3 class=""><i class="icon-magic"></i> Any 'magical' features?</h3>
-      <p class="">
-        How about <strong>free refunds</strong>? Not magical perhaps but pretty important all the same. When I said risk-free I really meant it! Also there are <strong>no time-limits</strong> on how long you can hold an order before charging it so longer funding windows are possible.
-      </p>
-      <p>Upcoming features include the ability to split, copy and reschedule events so that customer orders aren't wasted if demand for tickets exceed or fall short of anticipated sales.  </p>
-      <p> I'm also working on a cross-platform mobile app with some native features like barcode scanning, handy for keeping track of admissions on the night.</p>
-      <!-- <a href="/info" class="link-icon link-icon--more">more</a> -->
+    <div class="span6 well">
+      <h3 class=""><i class="icon-beaker"></i> Beta</h3>
+      <hr>
+      <p class="lead">To receive money you must have a US or Canadian bank account (Uk and Euro coming soon).</p>
+      <%= link_to "More", info_path, class: "btn btn-large" %>
     </div>
-    <div class="span6">
-      <h3 class=""><i class="icon-beaker"></i> Experiment with your Events</h3>
-      <p class="">
-        100 Motels allows for the trying of Events where the viability level is completely unknown beforehand. </p>
-        <p>The aim is to put event organizers and their customers in a position where they have literally nothing to lose and everything to gain from attempting an Event.</p>
-
-        <p>To that end, 100 Motels allows you to test and alter your events without any financial consequences. You can, for example, change the date, discount the ticket price, or run competing events against each other, to mention just a few possible use cases. </p>
-
-      <!-- <a href="/info" class="link-icon link-icon--more">more</a> -->
+    <div class="span6 well">
+      <h3 class=""><i class="icon-music"></i> For Artists</h3>
+      <hr>
+      <p class="lead">Built by independent Artists for the love of good music and late nights.</p>
+      <%= link_to "More", info_path, class: "btn btn-large" %>
     </div>
+  </div>
 </div>
