--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -41,8 +41,12 @@
     <div class="span6 well">
       <h3 class=""><i class="icon-music"></i> For Artists</h3>
       <hr>
-      <p class="lead">Built by independent Artists for the love of good music and late nights.</p>
+      <p class="lead">Built by independent Artists for the love of good music and late nights in distant lands.</p>
       <%= link_to "More", info_path, class: "btn btn-large" %>
     </div>
   </div>
+  <!-- <hr> -->
+  <div class="row-fluid"><div class="try-it-now pagination-centered span12"><%= link_to "Try it free!", guest_profiles_path, method: :post, class: 'btn btn-large btn-success' %></div>
+  </div>
+
 </div>
