--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -21,7 +21,7 @@
     <div class="span6 well">
       <h3 class=""><i class="icon-magic"></i> Features</h3>
       <hr>
-      <p class="lead">Progressive Crowdfunding and Ticketing, performer focused.</p>
+      <p class="lead">A Crowdfunding & Ticketing platform designed to be flexible and reusable. Don't give up until you fund it!</p>
       <%= link_to "More", info_path, class: "btn btn-large" %>
     </div>
     <div class="span6 well">
