--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -21,7 +21,7 @@
     <div class="span6 well">
       <h3 class=""><i class="icon-magic"></i> Features</h3>
       <hr>
-      <p class="lead">A Crowdfunding & Ticketing platform designed to be flexible and reusable. Don't give up until you fund it!</p>
+      <p class="lead">A Funding & Ticketing platform designed to be flexible and reusable. No time-limits or rules, just fund it.</p>
       <%= link_to "More", info_path, class: "btn btn-large" %>
     </div>
     <div class="span6 well">
@@ -35,7 +35,7 @@
     <div class="span6 well">
       <h3 class=""><i class="icon-beaker"></i> Beta</h3>
       <hr>
-      <p class="lead">To receive money you must have a US or Canadian bank account (Uk and Euro coming soon).</p>
+      <p class="lead">To receive money you must have a US or Canadian bank account (UK and Euro coming soon).</p>
       <%= link_to "More", info_path, class: "btn btn-large" %>
     </div>
     <div class="span6 well">
