fixed landing issue

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -131,6 +131,7 @@
 
 .landing-image {
   width: 100%;
+  padding: 10px;
 }
 
 .try-it-now {
@@ -142,4 +143,6 @@
   // color: #E9E6E6;
 }
 
-
+#try-it-button {
+  margin-bottom: 10px;
+}
