--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -4,13 +4,14 @@
       <h2>100 Motels | <small><%= link_to "sign-in", login_path %> &middot; <%= link_to "events", events_path %> </small></h2>
     <% end %>
   </div>
-    <div class="headline small-container">
+    <div class="headline container small-container">
           <h2>
             <span class="black-back">Tour the World without a record label.</span>
           </h2> <br>
-          <span class="span3">
-            <%= link_to "Try it free", guest_profiles_path, method: :post, class: 'btn btn-large btn-success' %><div class="search pull-right"><%= render 'search' %></div>
-          </span>
+        <div class="row-fluid  pull-left">
+          <div class="span3"><%= link_to "Try it free", guest_profiles_path, method: :post, class: 'btn btn-large btn-success', id: 'try-it-button' %></div>
+          <div class="span6 search"><%= render 'search' %></div>
+        </div>
     </div>
   </div>
   <!-- <hr class="fancy-hr"> -->
@@ -21,13 +22,13 @@
     <div class="span6 well">
       <h3 class=""><i class="icon-magic"></i> Features</h3>
       <hr>
-      <p class="lead">A Funding & Ticketing platform designed to be flexible and reusable. No time-limits or rules, just fund it.</p>
+      <p class="lead">A Funding & Ticketing platform designed to be flexible and reusable. No funding time-limits, take as long as you need.</p>
       <%= link_to "More", info_path, class: "btn btn-large" %>
     </div>
     <div class="span6 well">
       <h3 class=""><i class="icon-money"></i> Fees</h3>
       <hr>
-      <p class="lead">Total 3.9% + 30c per transaction added-on (full ticket price is yours), free refunds.</p>
+      <p class="lead">Total 3.9% + 30c per transaction added-on (you keep the full ticket price), full refunds including fees.</p>
       <%= link_to "More", info_path, class: "btn btn-large" %>
     </div>
   </div>
@@ -35,18 +36,18 @@
     <div class="span6 well">
       <h3 class=""><i class="icon-beaker"></i> Beta</h3>
       <hr>
-      <p class="lead">To receive money you must have a US or Canadian bank account (UK and Euro coming soon).</p>
+      <p class="lead">Some restrictions for beta. To receive money you must have a US or Canadian bank account (UK and Euro soon).</p>
       <%= link_to "More", info_path, class: "btn btn-large" %>
     </div>
     <div class="span6 well">
       <h3 class=""><i class="icon-music"></i> For Artists</h3>
       <hr>
-      <p class="lead">Built by independent Artists for the love of good music and late nights in distant lands.</p>
+      <p class="lead">Built by independent Artists for the love of good music & late nights in distant lands.</p>
       <%= link_to "More", info_path, class: "btn btn-large" %>
     </div>
   </div>
   <!-- <hr> -->
-  <div class="row-fluid"><div class="try-it-now pagination-centered span12"><%= link_to "Try it free!", guest_profiles_path, method: :post, class: 'btn btn-large btn-success' %></div>
+  <div class="row-fluid"><div class="try-it-now pagination-centered span12"><p class="lead">Read more about <%= link_to "how it works", info_path %> or</p> <%= link_to "Try it free!", guest_profiles_path, method: :post, class: 'btn btn-large btn-success' %></div>
   </div>
 
 </div>
