--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -4,12 +4,12 @@
       <h2>100 Motels | <small><%= link_to "sign-in", login_path %> &middot; <%= link_to "events", events_path %> </small></h2>
     <% end %>
   </div>
-    <div class="headline container small-container">
+    <div class="headline container small-container pagination-centered">
           <h2>
             <span class="black-back">Tour the World without a record label.</span>
           </h2> <br>
-        <div class="row-fluid  pull-left">
-          <div class="span3"><%= link_to "Try it free", guest_profiles_path, method: :post, class: 'btn btn-large btn-success', id: 'try-it-button' %></div>
+        <div class="row-fluid">
+          <div class="span3 offset1"><%= link_to "Try it free", guest_profiles_path, method: :post, class: 'btn btn-large btn-success', id: 'try-it-button' %></div>
           <div class="span6 search"><%= render 'search' %></div>
         </div>
     </div>
@@ -42,7 +42,7 @@
     <div class="span6 well">
       <h3 class=""><i class="icon-music"></i> For Artists</h3>
       <hr>
-      <p class="lead">Built by independent Artists for the love of good music & late nights in distant lands.</p>
+      <p class="lead">Built by independent Artists for the love of good music & late nights in distant towns & cities.</p>
       <%= link_to "More", info_path, class: "btn btn-large" %>
     </div>
   </div>
@@ -51,3 +51,4 @@
   </div>
 
 </div>
+
