--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -9,7 +9,7 @@
             <span class="black-back">Tour the World without a record label.</span>
           </h2> <br>
         <div class="row-fluid">
-          <div class="span3 offset1"><%= link_to "Try it free", guest_profiles_path, method: :post, class: 'btn btn-large btn-success', id: 'try-it-button' %></div>
+          <div class="span3 offset1"><%= new_or_view_event %></div>
           <div class="span6 search"><%= render 'search' %></div>
         </div>
     </div>
@@ -47,7 +47,7 @@
     </div>
   </div>
   <!-- <hr> -->
-  <div class="row-fluid"><div class="try-it-now pagination-centered span12"><p class="lead">Read more about <%= link_to "how it works", info_path %> or</p> <%= link_to "Try it free!", guest_profiles_path, method: :post, class: 'btn btn-large btn-success' %></div>
+  <div class="row-fluid"><div class="try-it-now pagination-centered span12"><p class="lead">Read more about <%= link_to "how it works", info_path %> or</p> <%= new_or_view_event %></div>
   </div>
 
 </div>
