--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -4,19 +4,16 @@
       <h2>100 Motels | <small><%= link_to "sign-in", login_path %> &middot; <%= link_to "events", events_path %> </small></h2>
     <% end %>
   </div>
-    <div class="headline container small-container pagination-centered">
-          <h2>
-            <span class="black-back">Tour the World without a record label.</span>
-          </h2> <br>
-        <div class="row-fluid">
-          <div class="span3 offset1"><%= new_or_view_event %></div>
-          <div class="span6 search"><%= render 'search' %></div>
-        </div>
+  <div class="headline container small-container pagination-centered">
+    <h2>
+      <span class="black-back">Tour the World without a record label.</span>
+    </h2> <br>
+    <div class="row-fluid">
+      <div class="span3 offset1"><%= new_or_view_event %></div>
+      <div class="span6 search"><%= render 'search' %></div>
     </div>
   </div>
-  <!-- <hr class="fancy-hr"> -->
 </div>
-
 <div class="landing-info">
   <div class="row-fluid">
     <div class="span6 well">
@@ -46,9 +43,10 @@
       <%= link_to "More", info_path, class: "btn btn-large" %>
     </div>
   </div>
-  <!-- <hr> -->
-  <div class="row-fluid"><div class="try-it-now pagination-centered span12"><p class="lead">Read more about <%= link_to "how it works", info_path %> or</p> <%= new_or_view_event %></div>
+  <div class="row-fluid">
+    <div class="try-it-now pagination-centered span12">
+      <p class="lead">Read more about <%= link_to "how it works", info_path %> or</p> <%= new_or_view_event %>
+    </div>
   </div>
-
 </div>
 
