fixed button margin issue

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -6,7 +6,7 @@
   </div>
   <div class="headline container small-container pagination-centered">
     <h2>
-      <span class="black-back">Tour the World without a record label.</span>
+      <span class="black-back">Tour the world without a record label.</span>
     </h2> <br>
     <div class="row-fluid">
       <div class="span3 offset1"><%= new_or_view_event %></div>
